Baseline model template

--- a/base_2024_project_template_v5.ipynb
+++ b/base_2024_project_template_v5.ipynb
@@ -25,10 +25,25 @@
         "id": "UZFKbKLJpVku"
       },
       "source": [
-        "The dataset is collected by the previous code. Please save the collected data (zip file or folder) in the same directory of this code in google drive.\n",
+        "The dataset is collected by the previous code.\n",
         "\n",
-        "The dataset consists of multiple <b> 480x640x3</b> color images in 3 classes (scissors, rock and paper).\n"
+        "Please save the collected data (zip file or folder) in '/content/gdrive/My Drive/rps'\n",
+        "\n",
+        "There is a test folder and a train and model folders in rps. See code for directory definition.\n",
+        "\n",
+        "The dataset consists of multiple <b> 480x640x3</b> color images in 3 classes (scissors, rock and paper).\n",
+        "\n",
+        "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "_xxGNwSv1Rqe"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
