Split into Part 1 for collecting and Part 2 for correcting/validating image quality

--- a/data_prep_v3.ipynb
+++ b/data_prep_v3.ipynb
@@ -198,15 +198,10 @@
         "proj_name = 'rps'\n",
         "###\n",
         "proj_path = '/content/gdrive/My Drive/'+proj_name+'/train'\n",
-        "proj_path"
+        "proj_path\n",
+        "# this will print put the folder where the images and models should reside\n",
+        "# to switch to a different image set change the proj_name value to the new folder on My Drive"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "J4_9fjTUa3Ol"
-      }
     },
     {
       "cell_type": "markdown",
@@ -219,71 +214,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 44,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "AHKwgGkE50d5",
-        "outputId": "4cf32211-30c1-4be9-f8cb-215bd3c836cf"
+        "id": "AHKwgGkE50d5"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "mkdir: cannot create directory ‘/content/gdrive/My’: Operation not supported\n",
-            "mkdir: cannot create directory ‘Drive/rps/train’: No such file or directory\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "#%mkdir $proj_path"
+        "#%mkdir $proj_path\n",
+        "## commented out since these have already been created"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7JGfKcvH5tK4",
-        "outputId": "9300e26a-7296-4561-8531-67793aa6b5d5"
+        "id": "7JGfKcvH5tK4"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "mkdir: cannot create directory ‘/content/gdrive/My’: No such file or directory\n",
-            "mkdir: cannot create directory ‘Drive/rps/train/rock’: No such file or directory\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#%mkdir {proj_path+'/rock'}"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 42,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "KLx48pvr5wts",
-        "outputId": "b3eae303-ca2d-4819-fe4d-b88b3b55c30e"
+        "id": "KLx48pvr5wts"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "mkdir: cannot create directory ‘/content/gdrive/MyDrive/rps/train/paper’: No such file or directory\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#%mkdir {proj_path+'/paper'}"
       ]
@@ -329,7 +287,7 @@
         }
       ],
       "source": [
-        "## Change the current directory\n",
+        "## Change the current directory to view the subfolders\n",
         "%cd $proj_path\n",
         "%ls"
       ]
