--- a/MVPS/Camp Rock Paper Scissors/colab_setup/Mounting_Drive_and_Cloning_Repository.ipynb
+++ b/MVPS/Camp Rock Paper Scissors/colab_setup/Mounting_Drive_and_Cloning_Repository.ipynb
@@ -50,20 +50,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "a94f4LLvuATk",
-        "outputId": "e9f763a2-81a2-4874-fd28-58cfda3a37ee"
+        "outputId": "53ebda6c-580b-471b-c570-5635d5f249d4"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/gdrive\n"
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
           ]
         }
       ],
@@ -86,20 +86,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "fj0abQ5vuPWw",
-        "outputId": "31939dd6-f1cf-403a-ea40-edb1596ffff3"
+        "outputId": "c312cfd1-fb29-4557-f6d8-3d597c9fd940"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[0m\u001b[01;34mgdrive\u001b[0m/  \u001b[01;34msample_data\u001b[0m/\n"
+            "shell-init: error retrieving current directory: getcwd: cannot access parent directories: Transport endpoint is not connected\n",
+            "ls: cannot open directory '.': Transport endpoint is not connected\n"
           ]
         }
       ],
@@ -110,7 +111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "9yIiLrbzwFek"
       },
@@ -122,7 +123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -157,7 +158,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -215,7 +216,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
