--- a/MVPS/Camp-Rock-Paper-Scissors/colab_setup/Mounting_Drive_and_Cloning_Repository.ipynb
+++ b/MVPS/Camp-Rock-Paper-Scissors/colab_setup/Mounting_Drive_and_Cloning_Repository.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/RudyMartin/dsai-2024/blob/main/MVPS/Camp%20Rock%20Paper%20Scissors/colab_setup/Mounting_Drive_and_Cloning_Repository.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/RudyMartin/dsai-2024/blob/main/Mounting_Drive_and_Cloning_Repository.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -50,27 +50,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 1,
       "metadata": {
+        "id": "a94f4LLvuATk",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "a94f4LLvuATk",
-        "outputId": "53ebda6c-580b-471b-c570-5635d5f249d4"
+        "outputId": "08d4ddbb-e2f7-45c8-9106-2bdf9239eefc"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
+            "Mounted at /content/gdrive\n"
           ]
         }
       ],
       "source": [
         "## This is a goodle\n",
         "from google.colab import drive\n",
-        "drive.mount('/content/gdrive')"
+        "drive.mount(\"/content/gdrive\", force_remount=True)"
       ]
     },
     {
@@ -86,21 +86,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "fj0abQ5vuPWw",
-        "outputId": "c312cfd1-fb29-4557-f6d8-3d597c9fd940"
+        "outputId": "7d1fc7ed-f227-476a-a6bc-137026000904"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "shell-init: error retrieving current directory: getcwd: cannot access parent directories: Transport endpoint is not connected\n",
-            "ls: cannot open directory '.': Transport endpoint is not connected\n"
+            "\u001b[0m\u001b[01;34mgdrive\u001b[0m/  \u001b[01;34msample_data\u001b[0m/\n"
           ]
         }
       ],
@@ -111,38 +110,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "9yIiLrbzwFek"
       },
       "outputs": [],
       "source": [
         "## Create a folder on Drive to store the repository\n",
-        "%mkdir 'gdrive/My Drive/MVPS'"
+        "%mkdir 'gdrive/My Drive/dsai-2024'"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "EyI4bnz-vYz6",
-        "outputId": "5da4579f-1010-4d3d-f1c1-cab5d11210e9"
+        "outputId": "204974c1-6b57-4d71-bd6f-adb5daba3a9a"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "/content/gdrive/My Drive/MVPS\n"
+            "/content/gdrive/My Drive/dsai-2024\n"
           ]
         }
       ],
       "source": [
         "## Change the current dire\n",
-        "%cd 'gdrive/My Drive/MVPS'"
+        "%cd 'gdrive/My Drive/dsai-2024'"
       ]
     },
     {
@@ -151,20 +150,20 @@
         "id": "XMBB58PKsvOO"
       },
       "source": [
-        "# Step 3: Clone the Git Repository\n",
+        "# Step 3: Clone the Git Repository Folder\n",
         "\n",
-        "This will create a clone of the Git Repository in the `dscamp` folder, so all the materials should be downloaded."
+        "This will create a clone of the Git Repository in the `dsai-2024` folder, so all the materials should be downloaded from only \"MVPS\"."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "M-S1WGSPumv5",
-        "outputId": "6a427d19-9870-4ba8-f330-9e9c651fd2ee"
+        "outputId": "90fc651e-4005-442f-af6d-511150032167"
       },
       "outputs": [
         {
@@ -181,14 +180,14 @@
             "\u001b[33mhint: 'development'. The just-created branch can be renamed via this command:\u001b[m\n",
             "\u001b[33mhint: \u001b[m\n",
             "\u001b[33mhint: \tgit branch -m <name>\u001b[m\n",
-            "Initialized empty Git repository in /content/gdrive/My Drive/MVPS/.git/\n",
+            "Initialized empty Git repository in /content/gdrive/My Drive/dsai-2024/.git/\n",
             "Updating origin\n",
-            "remote: Enumerating objects: 540, done.\u001b[K\n",
-            "remote: Counting objects: 100% (59/59), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (56/56), done.\u001b[K\n",
-            "remote: Total 540 (delta 27), reused 21 (delta 2), pack-reused 481\u001b[K\n",
-            "Receiving objects: 100% (540/540), 400.53 MiB | 14.78 MiB/s, done.\n",
-            "Resolving deltas: 100% (221/221), done.\n",
+            "remote: Enumerating objects: 552, done.\u001b[K\n",
+            "remote: Counting objects: 100% (71/71), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (68/68), done.\u001b[K\n",
+            "remote: Total 552 (delta 34), reused 21 (delta 2), pack-reused 481\u001b[K\n",
+            "Receiving objects: 100% (552/552), 400.54 MiB | 14.54 MiB/s, done.\n",
+            "Resolving deltas: 100% (228/228), done.\n",
             "From https://github.com/RudyMartin/dsai-2024\n",
             " * [new branch]      main       -> origin/main\n",
             "From https://github.com/RudyMartin/dsai-2024\n",
@@ -211,18 +210,18 @@
         "!echo \"MVPS\" >> .git/info/sparse-checkout\n",
         "\n",
         "# Pull the specified folder\n",
-        "!git pull origin main"
+        "!git pull origin main\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "1oFo95OYu4W4",
-        "outputId": "c3f12bfc-baee-48f4-805f-69d6e1715f92"
+        "outputId": "0a26a8eb-ab6d-4920-82a3-a7ad3c8c2b17"
       },
       "outputs": [
         {
@@ -272,7 +271,6 @@
   ],
   "metadata": {
     "colab": {
-      "name": "Mounting_Drive_and_Cloning_Repository.ipynb",
       "provenance": [],
       "include_colab_link": true
     },
