--- a/MVPS/Camp-Rock-Paper-Scissors/colab_setup/Mounting_Drive_and_Cloning_Repository.ipynb
+++ b/MVPS/Camp-Rock-Paper-Scissors/colab_setup/Mounting_Drive_and_Cloning_Repository.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/RudyMartin/dsai-2024/blob/main/Mounting_Drive_and_Cloning_Repository.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github.com/RudyMartin/dsai-2024/blob/main/MVPS/Camp-Rock-Paper-Scissors/colab_setup/Mounting_Drive_and_Cloning_Repository.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
