--- a/MVPS/Camp-Rock-Paper-Scissors/model_init/dsai_cifar10_v3.ipynb
+++ b/MVPS/Camp-Rock-Paper-Scissors/model_init/dsai_cifar10_v3.ipynb
@@ -113,7 +113,9 @@
           "text": [
             "Extracting ./data/cifar-10-python.tar.gz to ./data\n",
             "Files already downloaded and verified\n",
-            "[Epoch 1, Batch 200] loss: 1.817\n"
+            "[Epoch 1, Batch 200] loss: 1.817\n",
+            "[Epoch 2, Batch 200] loss: 1.386\n",
+            "[Epoch 3, Batch 200] loss: 1.185\n"
           ]
         }
       ],
