--- a/Mounting_Drive_and_Cloning_Repository.ipynb
+++ b/Mounting_Drive_and_Cloning_Repository.ipynb
@@ -118,7 +118,7 @@
       "outputs": [],
       "source": [
         "## Create a folder on Drive to store the repository\n",
-        "%mkdir 'gdrive/My Drive/MVPS'"
+        "%mkdir 'gdrive/My Drive/dsai-2024'"
       ]
     },
     {
@@ -136,13 +136,13 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "/content/gdrive/My Drive/MVPS\n"
+            "/content/gdrive/My Drive/dsai-2024"
           ]
         }
       ],
       "source": [
         "## Change the current dire\n",
-        "%cd 'gdrive/My Drive/MVPS'"
+        "%cd 'gdrive/My Drive/dsai-2024'"
       ]
     },
     {
