--- a/MVPS/Camp-Rock-Paper-Scissors/team_GG_AI/21_37_baseline_gestures.ipynb
+++ b/MVPS/Camp-Rock-Paper-Scissors/team_GG_AI/21_37_baseline_gestures.ipynb
@@ -62,7 +62,7 @@
       "metadata": {
         "id": "BSNw8bB_oUhT"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -949,6 +949,8 @@
         "predictions = Dense(5, activation='softmax')(x)\n",
         "\n",
         "# Define the model\n",
+        "model_name = \"testeval_v001\"\n",
+        "time_stamp = datetime.now().strftime('%Y%m%d_%H%M%S')\n",
         "model = Model(inputs=base_model.input, outputs=predictions)\n",
         "\n",
         "# Freeze the base_model layers so they are not trained\n",
@@ -957,7 +959,9 @@
         "\n",
         "# Compile the model with an initial learning rate\n",
         "initial_learning_rate = 0.001\n",
-        "model.compile(optimizer=Adam(learning_rate=initial_learning_rate), loss='categorical_crossentropy', metrics=['accuracy'])\n",
+        "model.compile(optimizer=Adam(learning_rate=initial_learning_rate),\n",
+        "              loss='categorical_crossentropy',\n",
+        "              metrics=['accuracy'])\n",
         "\n",
         "# Train the model\n",
         "model.fit(X_train, y_train, validation_data=(X_test, y_test), epochs=4, batch_size=32)\n",
@@ -970,13 +974,23 @@
         "fine_tune_learning_rate = 0.0001\n",
         "model.compile(optimizer=Adam(learning_rate=fine_tune_learning_rate), loss='categorical_crossentropy', metrics=['accuracy'])\n",
         "\n",
+        "# Configure callbacks for saving the best model and early stopping\n",
+        "early_stopping = EarlyStopping(monitor='val_loss', patience=10, restore_best_weights=True)\n",
+        "model_file = f'best_{model_name}_{time_stamp}.keras'\n",
+        "model_checkpoint = ModelCheckpoint(os.path.join(model_dir, {model_file}), save_best_only=True)\n",
         "# Train the model and get the history object\n",
-        "history = model.fit(X_train, y_train, validation_data=(X_test, y_test), epochs=4, batch_size=32)\n",
+        "history = model.fit(X_train,\n",
+        "                    y_train,\n",
+        "                    validation_data=(X_test, y_test),\n",
+        "                    callbacks=[early_stopping, model_checkpoint],\n",
+        "                    epochs=4,\n",
+        "                    batch_size=32)\n",
         "\n",
         "# Save the model\n",
         "#model_dir = 'override_model_directory'  # Specify your model directory if needed\n",
-        "model_name = \"testeval_v001\"\n",
-        "model.save(f'{model_dir}/{model_name}.keras')\n",
+        "#model_name = \"testeval_v001\"\n",
+        "#time_stamp = datetime.now().strftime('%Y%m%d_%H%M%S')\n",
+        "#model.save(f'{model_dir}/{model_name}_{time_stamp}.keras')\n",
         "\n",
         "# OPTIONAL: Save the weights to file also\n",
         "#time_stamp = datetime.now().strftime('%Y%m%d_%H%M%S')\n",
